# Task-Manager

./: .gitignore  README.md  pyproject.toml
Task_Manager/: cli.py  core.py
tests/: test_cli.py
